Fix layout being overlapped by mobile browser UI

--- a/client/src/assets/style/base/_layout.scss
+++ b/client/src/assets/style/base/_layout.scss
@@ -21,19 +21,27 @@
     "header-area"
     "body-area"
     "footer-area";
-  // padding: 0 $spacing-unit;
+
+  padding-top: env(safe-area-inset-top, $spacing-unit);
+  padding-bottom: env(safe-area-inset-bottom, $spacing-unit);
+  padding-left: env(safe-area-inset-left, $spacing-unit);
+  padding-right: env(safe-area-inset-right, $spacing-unit);
+
   height: 100vh;
   overflow: hidden;
 }
 
 header {
   grid-area: header-area;
+  padding-top: env(safe-area-inset-top, $spacing-unit);
 }
 
 main {
   grid-area: body-area;
   overflow-y: auto;
   max-height: 100%;
+
+  padding-bottom: env(safe-area-inset-bottom, 0);
 
   // Hiding scrollbar for Firefox
   scrollbar-width: none;
@@ -46,12 +54,14 @@ main {
 
 footer {
   grid-area: footer-area;
+  padding-bottom: env(safe-area-inset-bottom, $spacing-unit);
 }
 
 // Example component adjustments with media queries
 @include mobile {
   .main-layout {
     padding: calc($spacing-unit / 2); // Reduce padding on smaller devices
+    padding: env(safe-area-inset-top, calc($spacing-unit / 2)) env(safe-area-inset-right, calc($spacing-unit / 2)) env(safe-area-inset-bottom, calc($spacing-unit / 2)) env(safe-area-inset-left, calc($spacing-unit / 2));
   }
 
 }
@@ -59,6 +69,7 @@ footer {
 @include tablet {
   .main-layout {
     padding: $spacing-unit; // Default padding
+    padding: env(safe-area-inset-top, $spacing-unit) env(safe-area-inset-right, $spacing-unit) env(safe-area-inset-bottom, $spacing-unit) env(safe-area-inset-left, $spacing-unit);
   }
 
 }
@@ -66,6 +77,7 @@ footer {
 @include desktop {
   .main-layout {
     padding: calc($spacing-unit * 1.5); // Increase padding for desktop
+    padding: env(safe-area-inset-top, calc($spacing-unit * 1.5)) env(safe-area-inset-right, calc($spacing-unit * 1.5)) env(safe-area-inset-bottom, calc($spacing-unit * 1.5)) env(safe-area-inset-left, calc($spacing-unit * 1.5));
   }
 
 }
